apps/homelab/home-hud/pi-led-api-ingress.yaml
# TODO: replace with kong or gloo edge
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-led-api
  namespace: home-hud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,192.168.0.0/16,172.20.0.0/12,10.244.0.0/16
spec:
  ingressClassName: nginx
  rules:
  - host: pi-led-api.local.abbottland.io
    http:
      paths:
      - backend:
          service:
            name: pi-led-api
            port:
              number: 4001
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pi-led-api.local.abbottland.io
    secretName: pi-led-api-tls
